# app/docs/swagger.yaml
@@ -1,4 +1,8 @@
 definitions:
+  echo.HTTPError:
+    properties:
+      message: {}
+    type: object
   models.Friends:
     properties:
       id_friend:
@@ -10,8 +14,6 @@ definitions:
     properties:
       id:
         type: integer
-      link:
-        type: string
     type: object
   models.Post:
     properties:
@@ -31,6 +33,9 @@ definitions:
         type: integer
       user_last_name:
         type: string
+    required:
+    - message
+    - user_id
     type: object
   models.User:
     properties:
@@ -107,8 +112,6 @@ paths:
       - auth
   /feed:
     get:
-      consumes:
-      - application/json
       description: Feed
       produces:
       - application/json
@@ -127,11 +130,11 @@ paths:
         "405":
           description: invalid http method
           schema:
-            $ref: '#/definitions/pkg.Error'
+            $ref: '#/definitions/echo.HTTPError'
         "500":
           description: internal server error
           schema:
-            $ref: '#/definitions/pkg.Error'
+            $ref: '#/definitions/echo.HTTPError'
       summary: Feed
       tags:
       - posts
@@ -231,6 +234,30 @@ paths:
       tags:
       - auth
   /post/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a post
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: No Content
+        "405":
+          description: invalid http method
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Delete a post
+      tags:
+      - posts
     get:
       consumes:
       - application/json
@@ -256,11 +283,11 @@ paths:
         "405":
           description: invalid http method
           schema:
-            $ref: '#/definitions/pkg.Error'
+            $ref: '#/definitions/echo.HTTPError'
         "500":
           description: internal server error
           schema:
-            $ref: '#/definitions/pkg.Error'
+            $ref: '#/definitions/echo.HTTPError'
       summary: Show a post
       tags:
       - posts
@@ -291,46 +318,12 @@ paths:
         "405":
           description: invalid http method
           schema:
-            $ref: '#/definitions/pkg.Error'
+            $ref: '#/definitions/echo.HTTPError'
         "500":
           description: internal server error
           schema:
-            $ref: '#/definitions/pkg.Error'
+            $ref: '#/definitions/echo.HTTPError'
       summary: Create a post
-      tags:
-      - posts
-  /post/delete/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete a post
-      parameters:
-      - description: Post ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success get post
-          schema:
-            allOf:
-            - $ref: '#/definitions/pkg.Response'
-            - properties:
-                body:
-                  $ref: '#/definitions/models.Post'
-              type: object
-        "405":
-          description: invalid http method
-          schema:
-            $ref: '#/definitions/pkg.Error'
-        "500":
-          description: internal server error
-          schema:
-            $ref: '#/definitions/pkg.Error'
-      summary: Delete a post
       tags:
       - posts
   /post/update:
@@ -360,11 +353,11 @@ paths:
         "405":
           description: invalid http method
           schema:
-            $ref: '#/definitions/pkg.Error'
+            $ref: '#/definitions/echo.HTTPError'
         "500":
           description: internal server error
           schema:
-            $ref: '#/definitions/pkg.Error'
+            $ref: '#/definitions/echo.HTTPError'
       summary: Update a post
       tags:
       - posts
@@ -492,4 +485,42 @@ paths:
       summary: GetProfile
       tags:
       - users
+  /users/{id}/posts:
+    get:
+      description: Get all users posts
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success get feed
+          schema:
+            allOf:
+            - $ref: '#/definitions/pkg.Response'
+            - properties:
+                body:
+                  items:
+                    $ref: '#/definitions/models.Post'
+                  type: array
+              type: object
+        "404":
+          description: Post not found
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "405":
+          description: invalid http method
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Get users posts
+      tags:
+      - posts
 swagger: "2.0"
